implement barchat, course details

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
+    "recharts": "^2.10.4",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
