--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.2",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.21.2",
     "recharts": "^2.10.4",
     "sort-by": "^1.2.0"
